tests/snapshots/tui_fragmap__fragmap_horizontal_scroll.snap
---
source: tests/tui_fragmap.rs
expression: "harness.render(|frame| views::commit_list::render(&mut app, frame))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 40, height: 15 },
    content: [
        "SHA        Title               │Hunk gro",
        "aaa1       Commit aaa1         │  █  █  ",
        "bbb2       Commit bbb2         │█  █  █ ",
        "ccc3       Commit ccc3         │ █  █  █",
        "                               │        ",
        "                               │        ",
        "                               │        ",
        "                               │        ",
        "                               │        ",
        "                               │        ",
        "                               │        ",
        "                               │        ",
        "                               │        ",
        "                               │──██████",
        " aaa1 3/3            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 31, y: 0, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 22, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 1, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 34, y: 1, fg: White, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 35, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 37, y: 1, fg: White, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 38, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 2, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 38, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 3, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 33, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 34, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 4, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 5, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 6, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 8, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 10, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 11, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 12, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 13, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 32, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 21, y: 14, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 39, y: 14, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
