tests/snapshots/tui_fragmap__fragmap_reversed.snap
---
source: tests/tui_fragmap.rs
expression: "harness.render(|frame| views::commit_list::render(&mut app, frame))"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 10 },
    content: [
        "SHA        Title                                                       │Hunk gro",
        "cccc5555   Fix config typo                                             │█       ",
        "bbbb3333   Unrelated change                                            ││█      ",
        "aaaa1111   Add config file                                             │█       ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        "                                                                       │        ",
        " cccc55556666 1/3                                            Press 'h' for help ",
    ],
    styles: [
        x: 0, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 71, y: 0, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 0, fg: White, bg: Green, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 8, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: REVERSED,
        x: 26, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 1, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 1, fg: DarkGray, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 73, y: 1, fg: Reset, bg: Rgb(60, 60, 80), underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 2, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 2, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 11, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 3, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 3, fg: White, bg: Reset, underline: Reset, modifier: NONE,
        x: 73, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 4, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 5, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 6, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 7, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 71, y: 8, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 72, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
        x: 61, y: 9, fg: White, bg: Blue, underline: Reset, modifier: DIM,
        x: 79, y: 9, fg: White, bg: Blue, underline: Reset, modifier: NONE,
    ]
}
